[package]
name = "memson"
version = "0.1.0"
authors = ["jaupe <james@sliceup.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
futures = "0.1"
