[package]
name = "memson"
version = "0.1.1"
authors = ["jaupe <jaupe@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.0"

[dev-dependencies]
assert_approx_eq = "*"