[package]
name = "memson"
version = "0.1.1"
authors = ["jaupe <jaupe@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
clap = "*"
futures = "0.3.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }

[dev-dependencies]
assert_approx_eq = "*"